--- a/src/app/admin/transaction/inscan/inscan.component.html
+++ b/src/app/admin/transaction/inscan/inscan.component.html
@@ -1,56 +1,17 @@
-<section class="content ">
+<!-- <section class="content ">
     <div class="content-block">
         <div class="block-header ">
-            <!-- breadcrumb -->
-            <!-- <app-breadcrumb [title]="'Ambulance List'" [items]="['Ambulance']" [active_item]="'List'">
-        </app-breadcrumb> -->
+        
         </div>
         <div class="row clearfix">
             <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
                 <div class="card">
                     <div class="header">
-                        <h2><strong> AWB INSCAN</strong></h2>
+                        <h2><strong> </strong></h2>
 
                     </div>
                     <div class="body">
-                        <form>
-                            <div class="row">
-                                <div class="col-xl-3 col-lg-3 col-md-12 col-sm-12 mb-0">
-                                    <mat-form-field class="example-full-width" appearance="outline">
-                                        <mat-label>Receiving</mat-label>
-                                        <input matInput required>
-
-                                    </mat-form-field>
-                                </div>
-                                <div class="col-xl-3 col-lg-3 col-md-12 col-sm-12 mb-0">
-                                    <mat-form-field class="example-full-width" appearance="outline">
-                                        <mat-label>Bag Number</mat-label>
-                                        <input matInput>
-                                    </mat-form-field>
-                                </div>
-
-                                <div class="col-xl-3 col-lg-3 col-md-12 col-sm-12 mb-0">
-                                    <mat-form-field class="example-full-width" appearance="outline">
-                                        <mat-label>Awb Number</mat-label>
-                                        <input matInput required>
-
-                                    </mat-form-field>
-                                </div>
-                                <div class="col-xl-3 col-lg-3 col-md-12 col-sm-12 mb-0">
-                                    <mat-form-field class="example-full-width" appearance="outline">
-                                        <mat-label>Weight</mat-label>
-                                        <input matInput>
-                                    </mat-form-field>
-                                </div>
-                            </div>
-
-                            <div class="row">
-                                <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
-                                    <button class="btn-space" mat-raised-button color="primary">Save</button>
-                                    <button type="button" mat-raised-button color="warn">Reset</button>
-                                </div>
-                            </div>
-                        </form>
+                       
                         <div class="mt-4 table-responsive">
                             <div class="table table-bordered">
                                 <table class="table table-bordered">
@@ -87,4 +48,53 @@
             </div>
         </div>
     </div>
-</section>
+</section> -->
+
+
+
+<section class="content ">
+    <div class="content-block">
+      <div class="block-header ">
+        <!-- breadcrumb -->
+        <!-- <app-breadcrumb [title]="'Ambulance List'" [items]="['Ambulance']" [active_item]="'List'">
+        </app-breadcrumb> -->
+      </div>
+      <div class="row">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+          <div class="card">
+            <div class="body">
+              <div *ngIf="this.errormessage=='Unauthorized'" class="text-center">
+                <mat-icon color="warn">report_problem</mat-icon><br>
+                You are not authorized
+              </div>
+              <div class="responsive_table" *ngIf="this.errormessage!='Unauthorized'">
+                <div class="materialTableHeader">
+                  <div class="row">
+                    <div class="col-8">
+                      <ul class="header-buttons-left ms-0">
+                        <li class="tbl-title">
+                          <h2>AWB INSCAN</h2>
+                        </li>
+                        <li class="tbl-search-box">
+                          <app-datafilter></app-datafilter>
+                        </li>
+                        <li class="tbl-header-btn">
+                          <app-addbutton  [action]="this.AddAction" (OnAdd)="addItem($event)"></app-addbutton>
+                       
+                        </li>
+                      
+                       
+                      </ul>
+                    </div>
+                 
+                  </div>
+                </div>
+                <app-datatable *ngIf="inload" (dataChange)="addItem($event)"  [tabledata]="dataForTable"  [tableheader]="tableheader"></app-datatable>
+            </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  
