dialog position change

--- a/src/app/admin/transaction/dialogs/addedit/addedit.component.html
+++ b/src/app/admin/transaction/dialogs/addedit/addedit.component.html
@@ -29,10 +29,40 @@
         </div>
     </div>
 
-    <div class="row">
-        <div class="col-xl-12">
-            <button class="btn-space" mat-raised-button color="primary">Save</button>
-            <button type="button" mat-raised-button color="warn">Reset</button>
+ 
+    <div class="mt-4 table-responsive">
+        <div class="table table-bordered">
+            <table class="table table-bordered">
+            <thead>
+                <tr>
+                    <th>Origin Office</th>
+                    <th>Destination</th>
+                    <th>Tatal Awb</th>
+                    <th>Mode</th>
+                    <th>Total Weight</th>
+                    <th>Dispatch Date</th>
+                </tr>
+
+            </thead>
+            <tbody>
+                <tr>
+                    <td>f</td>
+                    <td>f</td>
+                    <td>f</td>
+                    <td>f</td>
+                    <td>f</td>
+                    <td>f</td>
+                    
+                </tr>
+            </tbody>
+        </table>
         </div>
+
     </div>
+<div class="row ">
+    <div class="col-xl-12">
+        <button class="btn-space" mat-raised-button color="primary">Save</button>
+        <button type="button" mat-raised-button color="warn">Reset</button>
+    </div>
+</div>
 </form>
