--- a/src/app/admin/transaction/drsofd/drsofd.component.html
+++ b/src/app/admin/transaction/drsofd/drsofd.component.html
@@ -23,7 +23,7 @@
                     <div class="col-8">
                       <ul class="header-buttons-left ms-0">
                         <li class="tbl-title">
-                          <h2>AWB INSCAN</h2>
+                          <h2>DRS/OFD</h2>
                         </li>
                         <li class="tbl-search-box">
                           <app-datafilter></app-datafilter>
